--- a/_data/tag/preproc.yml
+++ b/_data/tag/preproc.yml
@@ -34,7 +34,7 @@
 - name:  What dataformats are supported?
   link:  /faq/dataformat
 
-- name:  How can I deal with a discontinuous Neuralynx recording?
+- name:  How can I deal with a discontinuous Neuralynx LFP recording?
   link:  /faq/discontinuous_neuralynx
 
 - name:  How can I consistently represent artifacts in my data?
