--- a/_data/tag/corrupt.yml
+++ b/_data/tag/corrupt.yml
@@ -1,4 +1,4 @@
-- name:  How can I deal with a discontinuous Neuralynx recording?
+- name:  How can I deal with a discontinuous Neuralynx LFP recording?
   link:  /faq/discontinuous_neuralynx
 
 - name:  How can I fix a corrupt CTF meg4 file?
