--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -58,7 +58,7 @@
 - name:  What dataformats are supported?
   link:  /faq/dataformat
 
-- name:  How can I deal with a discontinuous Neuralynx recording?
+- name:  How can I deal with a discontinuous Neuralynx LFP recording?
   link:  /faq/discontinuous_neuralynx
 
 - name:  Does a firewall affect the communication between peers?
