--- a/_data/tag/plotting.yml
+++ b/_data/tag/plotting.yml
@@ -40,13 +40,13 @@
 - name:  Localizing oscillatory sources using beamformer techniques
   link:  /tutorial/beamformer
 
-- name:  Cluster-based permutation tests on event related fields
+- name:  Cluster-based permutation tests on event-related fields
   link:  /tutorial/cluster_permutation_timelock
 
 - name:  Analysis of corticomuscular coherence
   link:  /tutorial/coherence
 
-- name:  Event related averaging and MEG planar gradient
+- name:  Event-related averaging and MEG planar gradient
   link:  /tutorial/eventrelatedaveraging
 
 - name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
