--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -139,7 +139,7 @@
 - name:  Cluster-based permutation tests on time-frequency data
   link:  /tutorial/cluster_permutation_freq
 
-- name:  Cluster-based permutation tests on event related fields
+- name:  Cluster-based permutation tests on event-related fields
   link:  /tutorial/cluster_permutation_timelock
 
 - name:  Preprocessing - Reading continuous EEG and MEG data
