--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -121,7 +121,7 @@
 - name:  Cluster-based permutation tests on time-frequency data
   link:  /tutorial/cluster_permutation_freq
 
-- name:  Cluster-based permutation tests on event related fields
+- name:  Cluster-based permutation tests on event-related fields
   link:  /tutorial/cluster_permutation_timelock
 
 - name:  Analysis of corticomuscular coherence
@@ -139,7 +139,7 @@
 - name:  Virtual channel analysis of epilepsy MEG data
   link:  /tutorial/epilepsy
 
-- name:  Event related averaging and MEG planar gradient
+- name:  Event-related averaging and MEG planar gradient
   link:  /tutorial/eventrelatedaveraging
 
 - name:  Parametric and non-parametric statistics on event-related fields
@@ -175,7 +175,7 @@
 - name:  Classification of event related MEG data using MVPA-Light
   link:  /tutorial/mvpa_light
 
-- name:  Trigger-based trial selection
+- name:  Preprocessing - Segmenting and reading trial-based EEG and MEG data
   link:  /tutorial/preprocessing
 
 - name:  Sensor-level ERF, TFR and connectivity analyses
