--- a/_data/tag/erf.yml
+++ b/_data/tag/erf.yml
@@ -1,4 +1,4 @@
-- name:  Localizing the sources underlying the difference in event related fields
+- name:  Localizing the sources underlying the difference in event-related fields
   link:  /example/difference_erf
 
 - name:  Beamforming evoked fields and potentials in combined MEG/EEG data
