--- a/_data/tag/freq.yml
+++ b/_data/tag/freq.yml
@@ -109,7 +109,7 @@
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
 
-- name:  Classification of event related MEG data using MVPA-Light
+- name:  Classification of event-related MEG data using MVPA-Light
   link:  /tutorial/mvpa_light
 
 - name:  Sensor-level ERF, TFR and connectivity analyses
