--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -172,7 +172,7 @@
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
 
-- name:  Classification of event related MEG data using MVPA-Light
+- name:  Classification of event-related MEG data using MVPA-Light
   link:  /tutorial/mvpa_light
 
 - name:  Preprocessing - Segmenting and reading trial-based EEG and MEG data
