--- a/_data/tag/timelock.yml
+++ b/_data/tag/timelock.yml
@@ -25,7 +25,7 @@
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
 
-- name:  Classification of event related MEG data using MVPA-Light
+- name:  Classification of event-related MEG data using MVPA-Light
   link:  /tutorial/mvpa_light
 
 - name:  Preprocessing of EEG data and computing ERPs
