--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -79,7 +79,7 @@
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
 
-- name:  Classification of event related MEG data using MVPA-Light
+- name:  Classification of event-related MEG data using MVPA-Light
   link:  /tutorial/mvpa_light
 
 - name:  Whole brain connectivity and network analysis
