--- a/_data/tag/freq.yml
+++ b/_data/tag/freq.yml
@@ -10,7 +10,7 @@
 - name:  Conditional Granger causality in the frequency domain
   link:  /example/connectivity_conditional_granger
 
-- name:  Correlation analysis in fMRI data
+- name:  Correlation analysis of fMRI data
   link:  /example/correlation_analysis_in_fmri_data
 
 - name:  Cross-frequency analysis
