--- a/_data/tag/mri.yml
+++ b/_data/tag/mri.yml
@@ -4,7 +4,7 @@
 - name:  Check the quality of the anatomical coregistration
   link:  /example/coregistration_quality_control
 
-- name:  Correlation analysis in fMRI data
+- name:  Correlation analysis of fMRI data
   link:  /example/correlation_analysis_in_fmri_data
 
 - name:  Align EEG electrode positions to BEM headmodel
