--- a/_data/tag/raw.yml
+++ b/_data/tag/raw.yml
@@ -1,4 +1,4 @@
-- name:  Correlation analysis in fMRI data
+- name:  Correlation analysis of fMRI data
   link:  /example/correlation_analysis_in_fmri_data
 
 - name:  Getting started with reading raw EEG or MEG data
