--- a/_data/tag/script.yml
+++ b/_data/tag/script.yml
@@ -1,6 +1,6 @@
-- name:  Making a memory efficient analysis script
+- name:  Making a memory efficient analysis pipeline
   link:  /tutorial/memory
 
-- name:  Creating a clean analysis script
+- name:  Creating a clean analysis pipeline
   link:  /tutorial/scripting
 
