--- a/_data/tag/egi.yml
+++ b/_data/tag/egi.yml
@@ -7,6 +7,6 @@
 - name:  Getting started with Neuromag/Elekta/Megin data
   link:  /getting_started/neuromag
 
-- name:  Creating a clean analysis script
+- name:  Creating a clean analysis pipeline
   link:  /tutorial/scripting
 
