--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -238,9 +238,9 @@
 - name:  Fourier analysis of neuronal oscillations and synchronization
   link:  /tutorial/fourier
 
-- name:  Making a memory efficient analysis script
+- name:  Making a memory efficient analysis pipeline
   link:  /tutorial/memory
 
-- name:  Creating a clean analysis script
+- name:  Creating a clean analysis pipeline
   link:  /tutorial/scripting
 
