--- a/_data/tag/qsub.yml
+++ b/_data/tag/qsub.yml
@@ -1,3 +1,6 @@
+- name:  Distributed computing
+  link:  /development/distributed
+
 - name:  Distributed computing using a Linux compute cluster
   link:  /development/module/qsub
 
