--- a/_data/tag/cfg.yml
+++ b/_data/tag/cfg.yml
@@ -1,3 +1,6 @@
+- name:  Index of all configuration options
+  link:  /configuration
+
 - name:  How to use ft_checkconfig
   link:  /example/checkconfig
 
