--- a/_data/tag/ct.yml
+++ b/_data/tag/ct.yml
@@ -178,3 +178,6 @@
 - name:  FieldTrip connectivity demo
   link:  /workshop/meg-uk-2015/fieldtrip-connectivity-demo
 
+- name:  PracticalMEEG workshop in Aix-en-Provence
+  link:  /workshop/practicalmeeg2022
+
