--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -259,3 +259,6 @@
 - name:  Time-frequency analysis of EEG data
   link:  /workshop/oslo2019/timefrequency
 
+- name:  PracticalMEEG workshop in Aix-en-Provence
+  link:  /workshop/practicalmeeg2022
+
