--- a/_data/tag/ica.yml
+++ b/_data/tag/ica.yml
@@ -25,3 +25,6 @@
 - name:  Why does my ICA output contain complex numbers?
   link:  /faq/why_does_my_ica_output_contain_complex_numbers
 
+- name:  PracticalMEEG workshop in Aix-en-Provence
+  link:  /workshop/practicalmeeg2022
+
