--- a/_data/tag/beamformer.yml
+++ b/_data/tag/beamformer.yml
@@ -1,3 +1,6 @@
 - name:  Localizing sources of neural sources using beamformer techniques
   link:  /workshop/paris2019/handson_sourceanalysis
 
+- name:  Localizing sources of neural sources using beamformer techniques
+  link:  /workshop/practicalmeeg2022/handson_sourceanalysis
+
