--- a/_data/tag/mmfaces.yml
+++ b/_data/tag/mmfaces.yml
@@ -37,3 +37,21 @@
 - name:  Localizing sources of neural sources using beamformer techniques
   link:  /workshop/paris2019/handson_sourceanalysis
 
+- name:  Multimodal faces dataset
+  link:  /workshop/practicalmeeg2022/dataset
+
+- name:  Creation of headmodels and sourcemodels for source reconstruction
+  link:  /workshop/practicalmeeg2022/handson_anatomy
+
+- name:  Group analysis
+  link:  /workshop/practicalmeeg2022/handson_groupanalysis
+
+- name:  From raw data to ERP
+  link:  /workshop/practicalmeeg2022/handson_raw2erp
+
+- name:  Time-frequency analysis using Hanning window, multitapers and wavelets
+  link:  /workshop/practicalmeeg2022/handson_sensoranalysis
+
+- name:  Localizing sources of neural sources using beamformer techniques
+  link:  /workshop/practicalmeeg2022/handson_sourceanalysis
+
