--- a/_data/tag/preproc.yml
+++ b/_data/tag/preproc.yml
@@ -148,3 +148,6 @@
 - name:  From raw data to ERP
   link:  /workshop/paris2019/handson_raw2erp
 
+- name:  From raw data to ERP
+  link:  /workshop/practicalmeeg2022/handson_raw2erp
+
