--- a/_data/tag/sourcemodel.yml
+++ b/_data/tag/sourcemodel.yml
@@ -13,3 +13,6 @@
 - name:  Creation of headmodels and sourcemodels for source reconstruction
   link:  /workshop/paris2019/handson_anatomy
 
+- name:  Creation of headmodels and sourcemodels for source reconstruction
+  link:  /workshop/practicalmeeg2022/handson_anatomy
+
