--- a/_data/tag/statistics.yml
+++ b/_data/tag/statistics.yml
@@ -94,3 +94,6 @@
 - name:  Group analysis
   link:  /workshop/paris2019/handson_groupanalysis
 
+- name:  Group analysis
+  link:  /workshop/practicalmeeg2022/handson_groupanalysis
+
