--- a/_data/tag/timelock.yml
+++ b/_data/tag/timelock.yml
@@ -43,3 +43,9 @@
 - name:  From raw data to ERP
   link:  /workshop/paris2019/handson_raw2erp
 
+- name:  Group analysis
+  link:  /workshop/practicalmeeg2022/handson_groupanalysis
+
+- name:  From raw data to ERP
+  link:  /workshop/practicalmeeg2022/handson_raw2erp
+
