--- a/_data/tag/headmodel.yml
+++ b/_data/tag/headmodel.yml
@@ -97,3 +97,6 @@
 - name:  Creation of headmodels and sourcemodels for source reconstruction
   link:  /workshop/paris2019/handson_anatomy
 
+- name:  Creation of headmodels and sourcemodels for source reconstruction
+  link:  /workshop/practicalmeeg2022/handson_anatomy
+
