--- a/_data/tag/plotting.yml
+++ b/_data/tag/plotting.yml
@@ -85,3 +85,6 @@
 - name:  Group analysis
   link:  /workshop/paris2019/handson_groupanalysis
 
+- name:  Group analysis
+  link:  /workshop/practicalmeeg2022/handson_groupanalysis
+
