--- a/_data/tag/preprocessing.yml
+++ b/_data/tag/preprocessing.yml
@@ -142,3 +142,6 @@
 - name:  From raw data to ERP
   link:  /workshop/paris2019/handson_raw2erp
 
+- name:  From raw data to ERP
+  link:  /workshop/practicalmeeg2022/handson_raw2erp
+
