--- a/_data/tag/sourceanalysis.yml
+++ b/_data/tag/sourceanalysis.yml
@@ -4,3 +4,9 @@
 - name:  Localizing sources of neural sources using beamformer techniques
   link:  /workshop/paris2019/handson_sourceanalysis
 
+- name:  Creation of headmodels and sourcemodels for source reconstruction
+  link:  /workshop/practicalmeeg2022/handson_anatomy
+
+- name:  Localizing sources of neural sources using beamformer techniques
+  link:  /workshop/practicalmeeg2022/handson_sourceanalysis
+
