--- a/_data/tag/eyelink.yml
+++ b/_data/tag/eyelink.yml
@@ -1,6 +1,9 @@
 - name:  Converting an example eyetracker dataset for sharing in BIDS
   link:  /example/bids_eyetracker
 
+- name:  Combine MEG with Eyelink eyetracker data
+  link:  /example/meg_eyelink
+
 - name:  Getting started with SR-Research EyeLink eye-tracker data
   link:  /getting_started/eyelink
 
