--- a/_data/tag/preproc.yml
+++ b/_data/tag/preproc.yml
@@ -22,6 +22,9 @@
 - name:  Making your own trialfun for conditional trial definition
   link:  /example/making_your_own_trialfun_for_conditional_trial_definition
 
+- name:  Combine MEG with Eyelink eyetracker data
+  link:  /example/meg_eyelink
+
 - name:  Re-reference EEG and iEEG data
   link:  /example/rereference
 
