--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -37,6 +37,9 @@
 - name:  Can I compare EEG channels between different electrode caps?
   link:  /faq/capmapping
 
+- name:  Which methodological details should I report in an EEG/MEG manuscript?
+  link:  /faq/checklist
+
 - name:  What does the coilaccuracy parameter do?
   link:  /faq/coilaccuracy
 
