--- a/_data/tag/plotting.yml
+++ b/_data/tag/plotting.yml
@@ -85,6 +85,6 @@
 - name:  Group analysis
   link:  /workshop/paris2019/handson_groupanalysis
 
-- name:  Group analysis
+- name:  Group-level statistics with parametric and non-parametric methods
   link:  /workshop/practicalmeeg2022/handson_groupanalysis
 
