--- a/_data/tag/beamformer.yml
+++ b/_data/tag/beamformer.yml
@@ -1,6 +1,6 @@
-- name:  Localizing sources of neural sources using beamformer techniques
+- name:  Reconstructing source activity using beamformers
   link:  /workshop/paris2019/handson_sourceanalysis
 
-- name:  Localizing sources of neural sources using beamformer techniques
+- name:  Reconstructing source activity using beamformers
   link:  /workshop/practicalmeeg2022/handson_sourceanalysis
 
