--- a/_data/tag/paris2019.yml
+++ b/_data/tag/paris2019.yml
@@ -16,7 +16,7 @@
 - name:  Time-frequency analysis using Hanning window, multitapers and wavelets
   link:  /workshop/paris2019/handson_sensoranalysis
 
-- name:  Localizing sources of neural sources using beamformer techniques
+- name:  Reconstructing source activity using beamformers
   link:  /workshop/paris2019/handson_sourceanalysis
 
 - name:  Instructions for the USB stick
