--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -517,6 +517,9 @@
 - name:  Why is there a rim around the brain for which the source reconstruction is not computed?
   link:  /faq/why_is_there_a_rim_around_the_brain_for_which_the_source_reconstruction_is_not_computed
 
+- name:  Why is the largest peak in the spectrum at the frequency which is 1/segment length?
+  link:  /faq/why_largest_peak_spectrum
+
 - name:  Why should I use an average reference for EEG source reconstruction?
   link:  /faq/why_should_i_use_an_average_reference_for_eeg_source_reconstruction
 
