--- a/_data/tag/mtmfft.yml
+++ b/_data/tag/mtmfft.yml
@@ -4,3 +4,6 @@
 - name:  What convention is used to define absolute phase in 'mtmconvol', 'wavelet' and 'mtmfft'?
   link:  /faq/what_convention_is_used_to_define_absolute_phase_in_mtmconvol_wavelet_and_mtmfft
 
+- name:  Why is the largest peak in the spectrum at the frequency which is 1/segment length?
+  link:  /faq/why_largest_peak_spectrum
+
