--- a/_data/tag/meg-artifact.yml
+++ b/_data/tag/meg-artifact.yml
@@ -1,3 +1,6 @@
+- name:  Use independent component analysis (ICA) to remove EOG artifacts
+  link:  /example/ica_eog
+
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
