--- a/_data/tag/artifact.yml
+++ b/_data/tag/artifact.yml
@@ -1,10 +1,10 @@
 - name:  How to incorporate head movements in MEG analysis
   link:  /example/headmovement_meg
 
-- name:  Use independent component analysis (ICA) to remove ECG artifacts
+- name:  Independent component analysis (ICA) to remove ECG artifacts
   link:  /example/ica_ecg
 
-- name:  Use independent component analysis (ICA) to remove EOG artifacts
+- name:  Independent component analysis (ICA) to remove EOG artifacts
   link:  /example/ica_eog
 
 - name:  Combine MEG with Eyelink eyetracker data
@@ -48,6 +48,9 @@
 
 - name:  Automatic artifact rejection
   link:  /tutorial/automatic_artifact_rejection
+
+- name:  Cleaning artifacts using ICA
+  link:  /tutorial/ica_artifact_cleaning
 
 - name:  Extracting the brain state and events from continuous sleep EEG
   link:  /tutorial/sleep
