--- a/_data/tag/meg-removal.yml
+++ b/_data/tag/meg-removal.yml
@@ -1,6 +1,9 @@
 - name:  Independent component analysis (ICA) to remove ECG artifacts
   link:  /example/ica_ecg
 
+- name:  Use denoising source separation (DSS) to remove ECG artifacts
+  link:  /example/use_denoising_source_separation_dss_to_remove_ecg_artifacts
+
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
