--- a/_data/tag/head.yml
+++ b/_data/tag/head.yml
@@ -76,7 +76,7 @@
 - name:  References to implemented methods
   link:  /references_to_implemented_methods
 
-- name:  Template head models for forward volume conduction modeling
+- name:  Template head models for EEG volume conduction modeling
   link:  /template/headmodel
 
 - name:  Localizing oscillatory sources using beamformer techniques
