--- a/_data/tag/toolkit2022.yml
+++ b/_data/tag/toolkit2022.yml
@@ -7,3 +7,9 @@
 - name:  Test your MATLAB and FieldTrip installation in advance
   link:  /workshop/toolkit2022/test_installation
 
+- name:  Code of Conduct
+  link:  /workshop/toolkit2023/code_of_conduct
+
+- name:  Test your MATLAB and FieldTrip installation in advance
+  link:  /workshop/toolkit2023/test_installation
+
