--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -196,13 +196,13 @@
 - name:  Plotting the result of source reconstruction on a cortical mesh
   link:  /example/plotting_source_surface
 
-- name:  Making your analysis pipeline reprodudible using *reproducescript*
+- name:  Making your analysis pipeline reproducible using reproducescript
   link:  /example/reproducescript
 
-- name:  reproducescript on a full study
+- name:  Using reproducescript on a full study
   link:  /example/reproducescript_andersen
 
-- name:  reproducescript group analysis
+- name:  Using reproducescript for a group analysis
   link:  /example/reproducescript_group
 
 - name:  Re-reference EEG and iEEG data
