--- a/_data/tag/meg-language.yml
+++ b/_data/tag/meg-language.yml
@@ -16,8 +16,11 @@
 - name:  Preprocessing - Reading continuous EEG and MEG data
   link:  /tutorial/continuous
 
-- name:  Speeding up your analysis pipeline using distributed computing
-  link:  /tutorial/distributedcomputing
+- name:  Speeding up your analysis using distributed computing with parfor
+  link:  /tutorial/distributedcomputing_parfor
+
+- name:  Speeding up your analysis using distributed computing with qsub
+  link:  /tutorial/distributedcomputing_qsub
 
 - name:  Event-related averaging and MEG planar gradient
   link:  /tutorial/eventrelatedaveraging
