--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -142,8 +142,11 @@
 - name:  Preprocessing - Reading continuous EEG and MEG data
   link:  /tutorial/continuous
 
-- name:  Speeding up your analysis pipeline using distributed computing
-  link:  /tutorial/distributedcomputing
+- name:  Speeding up your analysis using distributed computing with parfor
+  link:  /tutorial/distributedcomputing_parfor
+
+- name:  Speeding up your analysis using distributed computing with qsub
+  link:  /tutorial/distributedcomputing_qsub
 
 - name:  Virtual channel analysis of epilepsy MEG data
   link:  /tutorial/epilepsy
