--- a/_data/tag/anywave.yml
+++ b/_data/tag/anywave.yml
@@ -1,4 +1,4 @@
-- name:  How can I use AnyWave for reviewing continuous data?
+- name:  Getting started with AnyWave
   link:  /getting_started/anywave
 
 - name:  Virtual channel analysis of epilepsy MEG data
