--- a/_data/tag/egi.yml
+++ b/_data/tag/egi.yml
@@ -1,7 +1,7 @@
 - name:  How can I read EGI mff data without the JVM?
   link:  /faq/how_can_i_read_egi_mff_data_without_the_jvm
 
-- name:  Getting started with Philips/EGI data
+- name:  Getting started with EGI/Philips/Magstim data
   link:  /getting_started/egi
 
 - name:  Getting started with Neuromag/Elekta/Megin data
