--- a/_data/tag/spm.yml
+++ b/_data/tag/spm.yml
@@ -1,6 +1,6 @@
 - name:  How to select the correct SPM toolbox?
   link:  /faq/how_to_select_the_correct_spm_toolbox
 
-- name:  Integrating with SPM
+- name:  Getting started with SPM
   link:  /getting_started/spm
 
