--- a/_data/tag/data.yml
+++ b/_data/tag/data.yml
@@ -13,11 +13,11 @@
 - name:  How can I append the files of two separate recordings?
   link:  /faq/append_files
 
-- name:  How can I share my MEG data?
-  link:  /faq/data_sharing
-
 - name:  What dataformats are supported?
   link:  /faq/dataformat
+
+- name:  How can I share my MEG data?
+  link:  /faq/data_sharing
 
 - name:  How are the various MATLAB data structures defined?
   link:  /faq/how_are_the_various_data_structures_defined
@@ -70,7 +70,7 @@
 - name:  Getting started with ASA and EEProbe
   link:  /getting_started/antneuro
 
-- name:  How can I use AnyWave for reviewing continuous data?
+- name:  Getting started with AnyWave
   link:  /getting_started/anywave
 
 - name:  Getting started with Artinis NIRS data
@@ -79,11 +79,11 @@
 - name:  Getting started with audio data
   link:  /getting_started/audio
 
-- name:  Getting started with ABM's B-Alert EEG data
-  link:  /getting_started/b_alert
-
 - name:  Getting started with BabySQUID data
   link:  /getting_started/babysquid
+
+- name:  Getting started with ABM's B-Alert EEG data
+  link:  /getting_started/b_alert
 
 - name:  Getting started with BESA data
   link:  /getting_started/besa
@@ -118,7 +118,7 @@
 - name:  Getting started with EEGLAB
   link:  /getting_started/eeglab
 
-- name:  Getting started with Philips/EGI data
+- name:  Getting started with EGI/Philips/Magstim data
   link:  /getting_started/egi
 
 - name:  Getting started with SR-Research EyeLink eye-tracker data
@@ -139,11 +139,11 @@
 - name:  Getting started with LORETA
   link:  /getting_started/loreta
 
-- name:  Getting started with Neuralynx data
-  link:  /getting_started/neuralynx
-
 - name:  Getting started with Neuralynx data recorded at the Donders Institute
   link:  /getting_started/neuralynx_fcdc
+
+- name:  Getting started with Neuralynx data
+  link:  /getting_started/neuralynx
 
 - name:  Getting started with Neuromag/Elekta/Megin data
   link:  /getting_started/neuromag
