--- a/_data/tag/seg.yml
+++ b/_data/tag/seg.yml
@@ -4,6 +4,6 @@
 - name:  How is the segmentation defined?
   link:  /faq/how_is_the_segmentation_defined
 
-- name:  How can I use Seg3D to check and modify segmentation results?
+- name:  Getting started with Seg3D
   link:  /getting_started/seg3d
 
