--- a/_data/tag/seg3d.yml
+++ b/_data/tag/seg3d.yml
@@ -1,3 +1,3 @@
-- name:  How can I use Seg3D to check and modify segmentation results?
+- name:  Getting started with Seg3D
   link:  /getting_started/seg3d
 
