--- a/_data/tag/segmentation.yml
+++ b/_data/tag/segmentation.yml
@@ -1,6 +1,9 @@
 - name:  How is the segmentation defined?
   link:  /faq/how_is_the_segmentation_defined
 
+- name:  Getting started with ParaView
+  link:  /getting_started/paraview
+
 - name:  Getting started with Seg3D
   link:  /getting_started/seg3d
 
